--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="gray">#B2BEB5</color>
+    <color name="background">#9D7377</color>
     <color name="button_color">#76b6c4</color>
+    <color name="gray_color">#B2BEB5</color>
 </resources>
