--- a/app/src/main/res/layout/fragment_home_page.xml
+++ b/app/src/main/res/layout/fragment_home_page.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/fragmenthomepage"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,57 +11,33 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:paddingTop="25dp">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Regulamin"
-                android:textSize="12sp"
-                android:textColor="@android:color/white"
-                android:background="@null"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp" />
-
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="PL/ENG"
-                android:textSize="12sp"
-                android:textColor="@android:color/white"
-                android:background="@null"
-                android:layout_marginEnd="16dp"
-                android:layout_marginTop="16dp" />
-
-        </LinearLayout>
+        android:paddingTop="25dp"
+        tools:layout_editor_absoluteX="-16dp"
+        tools:layout_editor_absoluteY="-122dp">
 
         <Space
             android:layout_width="match_parent"
-            android:layout_height="16dp" />
+            android:layout_height="10dp"
+            android:layout_weight="1" />
 
         <ImageView
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_gravity="center_horizontal"
-            android:src="@drawable/logo"
-            android:contentDescription="Cinema Logo" />
+            android:contentDescription="Cinema Logo"
+            android:src="@drawable/logo" />
 
         <Space
             android:layout_width="match_parent"
-            android:layout_height="16dp" />
+            android:layout_height="10dp" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:text="Aurora Cinema"
-            android:textSize="40sp"
-            android:textColor="@android:color/white" />
+            android:textColor="@android:color/white"
+            android:textSize="40sp" />
 
         <Space
             android:layout_width="match_parent"
@@ -67,31 +45,44 @@
             android:layout_weight="1" />
 
         <LinearLayout
+            android:id="@+id/buttons_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:paddingStart="16dp"
-            android:paddingBottom="16dp">
+            android:gravity="bottom"
+            android:orientation="horizontal">
 
-            <TextView
-                android:layout_width="wrap_content"
+            <Button
+                android:id="@+id/button_regulamin"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@null"
                 android:text="Regulamin"
-                android:textSize="12sp"
-                android:textColor="@android:color/black"
-                android:paddingStart="8dp"
-                android:paddingBottom="8dp" />
+                android:textColor="@android:color/white"
+                android:textSize="12sp" />
 
-            <TextView
-                android:layout_width="wrap_content"
+            <Button
+                android:id="@+id/button_kontakt"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@null"
                 android:text="Kontakt"
-                android:textSize="12sp"
-                android:textColor="@android:color/black"
-                android:paddingEnd="8dp"
-                android:paddingBottom="8dp" />
+                android:textColor="@android:color/white"
+                android:textSize="12sp" />
 
         </LinearLayout>
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="16dp" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="10dp"
+            android:orientation="horizontal"
+            android:paddingStart="16dp"
+            android:paddingBottom="16dp" />
 
     </LinearLayout>
 
