--- a/app/src/main/res/layout/fragment_home_page.xml
+++ b/app/src/main/res/layout/fragment_home_page.xml
@@ -6,6 +6,19 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background">
+    <Button
+        android:id="@+id/button_user"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="User"
+        android:textColor="@android:color/white"
+        android:textSize="30sp"
+        android:background="@null"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -15,10 +28,7 @@
         tools:layout_editor_absoluteX="-16dp"
         tools:layout_editor_absoluteY="-122dp">
 
-        <Space
-            android:layout_width="match_parent"
-            android:layout_height="10dp"
-            android:layout_weight="1" />
+
 
         <ImageView
             android:layout_width="100dp"
@@ -38,7 +48,30 @@
             android:text="Aurora Cinema"
             android:textColor="@android:color/white"
             android:textSize="40sp" />
-
+        <Button
+            android:id="@+id/button_repertuar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Repertuar"
+            android:textColor="@android:color/white"
+            android:textSize="20sp"
+            android:background="@null"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="50dp"/>
+        <Button
+            android:id="@+id/button_offer"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Oferta"
+            android:textColor="@android:color/white"
+            android:textSize="20sp"
+            android:background="@null"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="100dp"/>
         <Space
             android:layout_width="match_parent"
             android:layout_height="0dp"
