--- a/app/src/main/res/layout/fragment_main_activity.xml
+++ b/app/src/main/res/layout/fragment_main_activity.xml
@@ -33,8 +33,7 @@
             android:layout_gravity="center_horizontal"
             android:text="Zaloguj się"
             android:textSize="20sp"
-            android:textColor="@color/black"
-            android:background="@color/white" />
+            android:textColor="@color/white" />
 
         <Space
             android:layout_width="match_parent"
@@ -47,8 +46,7 @@
             android:layout_gravity="center_horizontal"
             android:text="Zarejestruj się"
             android:textSize="20sp"
-            android:textColor="@color/black"
-            android:background="@color/white" />
+            android:textColor="@color/white" />
 
     </LinearLayout>
 
