--- a/app/src/main/res/layout/fragment_reservation.xml
+++ b/app/src/main/res/layout/fragment_reservation.xml
@@ -7,12 +7,14 @@
     android:background="@color/background">
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="250dp"
+        android:layout_height="130dp"
         android:text="Ekran"
         android:textColor="@android:color/white"
+        android:textAlignment="center"
+        android:textSize="40sp"
         android:background="@android:color/darker_gray"
-        android:padding="16dp"
+        android:padding="40dp"
         android:layout_gravity="center"/>
 
     <Space
