--- a/app/src/main/res/layout/fragment_home_page.xml
+++ b/app/src/main/res/layout/fragment_home_page.xml
@@ -6,19 +6,21 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background">
-    <Button
+
+    <ImageButton
         android:id="@+id/button_user"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="User"
-        android:textColor="@android:color/white"
-        android:textSize="30sp"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
         android:background="@null"
+        android:src="@drawable/user_icon"
+        android:scaleType="fitCenter"
+        android:drawablePadding="8dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        />
+        android:layout_marginEnd="16dp" />
+
+
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -46,7 +48,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:text="Aurora Cinema"
-            android:textColor="@android:color/white"
+            android:textColor="#EBEFCACA"
             android:textSize="40sp" />
         <Button
             android:id="@+id/button_repertuar"
@@ -54,24 +56,24 @@
             android:layout_height="wrap_content"
             android:text="Repertuar"
             android:textColor="@android:color/white"
-            android:textSize="20sp"
-            android:background="@null"
+            android:textSize="30sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="50dp"/>
+            android:layout_marginTop="70dp"
+            />
+
         <Button
             android:id="@+id/button_offer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Oferta"
             android:textColor="@android:color/white"
-            android:textSize="20sp"
-            android:background="@null"
+            android:textSize="30sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="100dp"/>
+            android:layout_marginTop="50dp"/>
         <Space
             android:layout_width="match_parent"
             android:layout_height="0dp"
@@ -92,7 +94,7 @@
                 android:background="@null"
                 android:text="Regulamin"
                 android:textColor="@android:color/white"
-                android:textSize="12sp" />
+                android:textSize="20sp" />
 
             <Button
                 android:id="@+id/button_kontakt"
@@ -102,7 +104,7 @@
                 android:background="@null"
                 android:text="Kontakt"
                 android:textColor="@android:color/white"
-                android:textSize="12sp" />
+                android:textSize="20sp" />
 
         </LinearLayout>
 
