--- a/app/src/main/res/layout/fragment_offer.xml
+++ b/app/src/main/res/layout/fragment_offer.xml
@@ -10,7 +10,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Oferta"
-        android:textSize="24sp"
+        android:textSize="40sp"
         android:textStyle="bold"
         android:layout_gravity="center"
         android:layout_marginBottom="16dp"/>
@@ -20,6 +20,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Bilety"
+        android:textSize="25sp"
         android:layout_marginBottom="16dp"/>
 
     <Button
@@ -27,12 +28,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Bar"
+        android:textSize="25sp"
         android:layout_marginBottom="16dp"/>
 
     <Button
         android:id="@+id/button_GiftCards"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Karty Podarunkowe"/>
+        android:textSize="25sp"
+        android:text="Karty podarunkowe"/>
 
 </LinearLayout>
