--- a/app/src/main/res/layout/fragment_rregistration_page.xml
+++ b/app/src/main/res/layout/fragment_rregistration_page.xml
@@ -9,8 +9,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Rejestracja"
-        android:textSize="24sp"
+        android:textSize="35sp"
         android:layout_gravity="center"
+        android:textStyle="bold"
         android:layout_marginBottom="16dp"/>
 
     <EditText
@@ -18,6 +19,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Imię"
+        android:textSize="25sp"
         android:inputType="text"/>
 
     <EditText
@@ -25,6 +27,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Nazwisko"
+        android:textSize="25sp"
         android:inputType="text"/>
 
     <EditText
@@ -32,6 +35,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Email"
+        android:textSize="25sp"
         android:inputType="textEmailAddress"/>
 
     <EditText
@@ -39,6 +43,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Numer telefonu"
+        android:textSize="25sp"
         android:inputType="phone"/>
 
     <EditText
@@ -46,6 +51,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Hasło"
+        android:textSize="25sp"
         android:inputType="textPassword"/>
 
     <Button
@@ -54,5 +60,6 @@
         android:layout_height="wrap_content"
         android:text="Zarejestruj się"
         android:layout_gravity="center"
+        android:textSize="25sp"
         android:layout_marginTop="16dp"/>
 </LinearLayout>
