--- a/app/src/main/res/layout/fragment_user_profile.xml
+++ b/app/src/main/res/layout/fragment_user_profile.xml
@@ -12,8 +12,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Profil użytkownika"
-        android:textSize="24sp"
-        android:textColor="@color/black"
+        android:textSize="35sp"
+        android:textColor="@color/white"
         android:textStyle="bold"
         android:layout_gravity="center"
         android:layout_marginBottom="16dp"/>
@@ -24,6 +24,7 @@
         android:layout_height="wrap_content"
         android:textColor="@color/black"
         android:hint="Login"
+        android:textSize="25sp"
         android:inputType="text"
         android:layout_marginBottom="16dp"/>
 
@@ -33,6 +34,7 @@
         android:layout_height="wrap_content"
         android:textColor="@color/black"
         android:hint="Email"
+        android:textSize="25sp"
         android:inputType="textEmailAddress"
         android:layout_marginBottom="16dp"/>
 
@@ -45,8 +47,8 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/black"
-            android:textSize="40dp"
+            android:textColor="@color/white"
+            android:textSize="30dp"
             android:text="Punkty: "
             android:textStyle="bold"
             android:layout_marginEnd="8dp"/>
@@ -55,8 +57,8 @@
             android:id="@+id/textViewPoints"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/black"
-            android:textSize="40dp"
+            android:textColor="@color/gray_color"
+            android:textSize="30dp"
             android:text="100"
             android:textStyle="bold"/>
     </LinearLayout>
@@ -66,12 +68,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Historia"
+        android:textSize="25sp"
         android:layout_marginBottom="16dp"/>
 
     <Button
         android:id="@+id/buttonRating"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textSize="25sp"
         android:text="Ocena"/>
 
 </LinearLayout>
