--- a/app/src/main/res/layout/fragment_home_page.xml
+++ b/app/src/main/res/layout/fragment_home_page.xml
@@ -7,18 +7,30 @@
     android:layout_height="match_parent"
     android:background="@color/background">
 
-    <ImageButton
+    <ImageView
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_gravity="center_horizontal"
+        android:contentDescription="Cinema Logo"
+        android:src="@drawable/user_icon"
+        tools:ignore="MissingConstraints"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginEnd="1dp"
+        android:layout_marginTop="1dp"/>
+
+    <Button
         android:id="@+id/button_user"
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:background="@null"
-        android:src="@drawable/user_icon"
         android:scaleType="fitCenter"
         android:drawablePadding="8dp"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="1dp"
+        android:layout_marginEnd="1dp"
+        tools:ignore="MissingConstraints" />
 
 
 
@@ -94,7 +106,8 @@
                 android:background="@null"
                 android:text="Regulamin"
                 android:textColor="@android:color/white"
-                android:textSize="20sp" />
+                android:textSize="20sp"
+                style="?android:attr/buttonBarButtonStyle" />
 
             <Button
                 android:id="@+id/button_kontakt"
@@ -104,7 +117,8 @@
                 android:background="@null"
                 android:text="Kontakt"
                 android:textColor="@android:color/white"
-                android:textSize="20sp" />
+                android:textSize="20sp"
+                style="?android:attr/buttonBarButtonStyle" />
 
         </LinearLayout>
 
@@ -112,12 +126,7 @@
             android:layout_width="match_parent"
             android:layout_height="16dp" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="10dp"
-            android:orientation="horizontal"
-            android:paddingStart="16dp"
-            android:paddingBottom="16dp" />
+
 
     </LinearLayout>
 
