--- a/app/src/main/res/layout/fragment_contact_page.xml
+++ b/app/src/main/res/layout/fragment_contact_page.xml
@@ -46,7 +46,7 @@
     <WebView
         android:id="@+id/webView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"/>
+        android:layout_height="match_parent"
+        android:layout_weight="1" />
 
 </LinearLayout>
