--- a/app/src/main/res/layout/fragment_main_activity.xml
+++ b/app/src/main/res/layout/fragment_main_activity.xml
@@ -24,7 +24,7 @@
             android:text="Aurora Cinema"
             android:textSize="40sp"
             android:textColor="@android:color/white"
-            android:layout_marginBottom="250dp" />
+            android:layout_marginBottom="150dp" />
 
         <Button
             android:id="@+id/loginbutton"
@@ -32,8 +32,9 @@
             android:layout_height="70dp"
             android:layout_gravity="center_horizontal"
             android:text="Zaloguj się"
+            android:textColor="@color/white"
             android:textSize="20sp"
-            android:textColor="@color/white" />
+            android:layout_marginTop="10dp"/>
 
         <Space
             android:layout_width="match_parent"
@@ -46,7 +47,9 @@
             android:layout_gravity="center_horizontal"
             android:text="Zarejestruj się"
             android:textSize="20sp"
-            android:textColor="@color/white" />
+            android:textColor="@color/white"
+            android:layout_marginTop="10dp"
+            />
 
     </LinearLayout>
 
