--- a/app/src/main/res/layout/fragment_reservation.xml
+++ b/app/src/main/res/layout/fragment_reservation.xml
@@ -22,15 +22,14 @@
         android:layout_height="16dp"/>
 
     <GridLayout
+        android:id="@+id/gridLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:rowCount="8"
         android:columnCount="10"
         android:orientation="horizontal">
 
-        <!-- Static data for demonstration purposes -->
-        <!-- Loop to create seats -->
-        <!-- Remember to replace the static content with dynamic content based on your logic -->
+        <!-- Dynamic content for cinema seats will be added here -->
 
     </GridLayout>
 
