--- a/app/src/main/res/layout/fragment_user_profile.xml
+++ b/app/src/main/res/layout/fragment_user_profile.xml
@@ -69,13 +69,15 @@
         android:layout_height="wrap_content"
         android:text="Historia"
         android:textSize="25sp"
-        android:layout_marginBottom="16dp"/>
+        android:layout_marginBottom="16dp"
+        android:background="@drawable/rounded_button"/>
 
     <Button
         android:id="@+id/buttonRating"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="25sp"
-        android:text="Ocena"/>
+        android:text="Ocena"
+        android:background="@drawable/rounded_button"/>
 
 </LinearLayout>
