--- a/app/src/main/res/layout/fragment_home_page.xml
+++ b/app/src/main/res/layout/fragment_home_page.xml
@@ -30,7 +30,8 @@
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="1dp"
         android:layout_marginEnd="1dp"
-        tools:ignore="MissingConstraints" />
+        tools:ignore="MissingConstraints"
+        />
 
 
 
@@ -64,11 +65,12 @@
             android:textSize="40sp" />
         <Button
             android:id="@+id/button_repertuar"
-            android:layout_width="wrap_content"
+            android:layout_width="250dp"
             android:layout_height="wrap_content"
             android:text="Repertuar"
+            android:background="@drawable/rounded_button"
             android:textColor="@android:color/white"
-            android:textSize="30sp"
+            android:textSize="25sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_gravity="center_horizontal"
@@ -77,15 +79,16 @@
 
         <Button
             android:id="@+id/button_offer"
-            android:layout_width="wrap_content"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:text="Oferta"
             android:textColor="@android:color/white"
-            android:textSize="30sp"
+            android:textSize="25sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="50dp"/>
+            android:layout_marginTop="50dp"
+            android:background="@drawable/rounded_button"/>
         <Space
             android:layout_width="match_parent"
             android:layout_height="0dp"
