--- a/app/src/main/res/layout/fragment_repertuar.xml
+++ b/app/src/main/res/layout/fragment_repertuar.xml
@@ -20,7 +20,8 @@
         android:text="Wybierz film"
         android:textSize="25sp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="400dp"/>
+        android:layout_marginTop="400dp"
+        android:background="@drawable/rounded_button"/>
 
 
 </RelativeLayout>
