--- a/app/src/main/res/layout/fragment_repertuar.xml
+++ b/app/src/main/res/layout/fragment_repertuar.xml
@@ -15,7 +15,7 @@
         android:layout_marginBottom="10dp"/>
     <Button
         android:id="@+id/button_choose_movie"
-        android:layout_width="wrap_content"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:text="Wybierz film"
         android:textSize="25sp"
