--- a/app/src/main/res/layout/fragment_gift_card.xml
+++ b/app/src/main/res/layout/fragment_gift_card.xml
@@ -57,17 +57,19 @@
         android:orientation="horizontal">
 
         <TextView
+            android:id="@+id/standardowa_text"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Standardowa"
+            android:text=" "
             android:textSize="25dp"/>
 
         <TextView
+            android:id="@+id/standardowa_price"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="50.00"
+            android:text=" "
             android:textSize="25dp"/>
     </LinearLayout>
     <LinearLayout
