--- a/app/src/main/res/layout/fragment_bar.xml
+++ b/app/src/main/res/layout/fragment_bar.xml
@@ -51,10 +51,10 @@
 
         <TextView
             android:layout_width="0dp"
+            android:id="@+id/popcorn_text"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:textSize="25sp"
-            android:text="Popcorn"/>
+            android:textSize="25sp"/>
 
         <TextView
             android:layout_width="0dp"
