--- a/app/src/main/res/layout/fragment_bar.xml
+++ b/app/src/main/res/layout/fragment_bar.xml
@@ -54,14 +54,15 @@
             android:id="@+id/popcorn_text"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:textSize="25sp"/>
+            android:textSize="25sp"
+            android:text="Popcorn"/>
 
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:id="@+id/popcorn_price"
             android:layout_weight="1"
-            android:textSize="25sp"
-            android:text="25.00"/>
+            android:textSize="25sp" />
 
     </LinearLayout>
     <Space
@@ -84,7 +85,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:textSize="25sp"
-            android:text="26.00"/>
+            android:id="@+id/nachos_price"/>
 
     </LinearLayout>
     <Space
@@ -107,7 +108,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:textSize="25sp"
-            android:text="8.00"/>
+            android:id="@+id/sok_price"/>
 
     </LinearLayout>
     <Space
@@ -130,7 +131,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:textSize="25sp"
-            android:text="6.00"/>
+            android:id="@+id/cola_price"/>
 
     </LinearLayout>
 
