--- a/app/src/main/res/layout/fragment_ticket.xml
+++ b/app/src/main/res/layout/fragment_ticket.xml
@@ -60,7 +60,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:textSize="25sp"
-            android:text="10.00"/>
+            android:id="@+id/normalny_price"/>
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
@@ -79,7 +79,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:textSize="25sp"
-            android:text="8.00"/>
+            android:id="@+id/ulgowy_price"/>
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
@@ -98,7 +98,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:textSize="25sp"
-            android:text="7.00"/>
+            android:id="@+id/senior_price"/>
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
@@ -117,7 +117,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:textSize="25sp"
-            android:text="5.00"/>
+            android:id="@+id/dzieciecy_price"/>
     </LinearLayout>
 
 
