--- a/app/src/main/res/layout/fragment_repertuar.xml
+++ b/app/src/main/res/layout/fragment_repertuar.xml
@@ -1,9 +1,9 @@
-<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16dp"
     android:background="@color/background">
+
     <TextView
         android:id="@+id/text_repertuar"
         android:layout_width="wrap_content"
@@ -13,6 +13,15 @@
         android:textStyle="bold"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="10dp"/>
+
+    <WebView
+        android:id="@+id/webview_repertuar"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_below="@id/text_repertuar"
+        android:layout_above="@id/button_choose_movie"
+        android:layout_weight="1"/>
+
     <Button
         android:id="@+id/button_choose_movie"
         android:layout_width="250dp"
@@ -20,8 +29,7 @@
         android:text="Wybierz film"
         android:textSize="25sp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="400dp"
+        android:layout_marginBottom="20dp"
+        android:layout_alignParentBottom="true"
         android:background="@drawable/rounded_button"/>
-
-
 </RelativeLayout>
