--- a/app/src/main/res/layout/fragment_repertuar.xml
+++ b/app/src/main/res/layout/fragment_repertuar.xml
@@ -14,13 +14,13 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="10dp"/>
 
-    <WebView
-        android:id="@+id/webview_repertuar"
+    <LinearLayout
+        android:id="@+id/movies_layout"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_below="@id/text_repertuar"
         android:layout_above="@id/button_choose_movie"
-        android:layout_weight="1"/>
+        android:orientation="vertical" />
 
     <Button
         android:id="@+id/button_choose_movie"
