--- a/app/src/main/res/layout/fragment_rating.xml
+++ b/app/src/main/res/layout/fragment_rating.xml
@@ -9,7 +9,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Historia oglądania"
+        android:text="Oceny"
         android:textSize="35sp"
         android:textStyle="bold"
         android:layout_gravity="center"
