--- a/app/src/main/res/layout/fragment_buy_ticket.xml
+++ b/app/src/main/res/layout/fragment_buy_ticket.xml
@@ -8,7 +8,7 @@
         android:id="@+id/text_repertuar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Repertuar"
+        android:text="Wybierz film"
         android:textSize="40sp"
         android:textStyle="bold"
         android:layout_centerHorizontal="true"
@@ -19,18 +19,15 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_below="@id/text_repertuar"
-        android:layout_above="@id/button_choose_movie"
         android:orientation="vertical" />
-
     <Button
         android:id="@+id/button_choose_movie"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:text=""
+        android:text="Wybierz film"
         android:textSize="25sp"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="20dp"
         android:layout_alignParentBottom="true"
-        android:background="@drawable/rounded_button"
-        android:backgroundTint="@color/background"/>
+        android:background="@drawable/rounded_button"/>
 </RelativeLayout>
