--- a/app/src/main/res/layout/fragment_home_page.xml
+++ b/app/src/main/res/layout/fragment_home_page.xml
@@ -89,6 +89,18 @@
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="50dp"
             android:background="@drawable/rounded_button"/>
+        <Button
+            android:id="@+id/button_buy"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:text="Kup bilet"
+            android:textColor="@android:color/white"
+            android:textSize="25sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="50dp"
+            android:background="@drawable/rounded_button"/>
         <Space
             android:layout_width="match_parent"
             android:layout_height="0dp"
