--- a/app/src/main/res/layout/fragment_buy_ticket.xml
+++ b/app/src/main/res/layout/fragment_buy_ticket.xml
@@ -14,13 +14,24 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="10dp"/>
 
+
     <LinearLayout
         android:id="@+id/movies_layout"
         android:layout_width="match_parent"
-        android:layout_height="2220dp"
+        android:layout_height="400dp"
         android:layout_below="@id/text_repertuar"
         android:orientation="vertical" />
-
+    <EditText
+        android:id="@+id/editText_movie_input"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Wpisz rodzaj biletu"
+        android:textSize="20sp"
+        android:layout_below="@id/movies_layout"
+        android:layout_marginTop="20dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginHorizontal="40dp"
+        android:inputType="text"/>
     <Button
         android:id="@+id/button_choose_movie"
         android:layout_width="250dp"
@@ -28,7 +39,7 @@
         android:text="Wybierz film"
         android:textSize="25sp"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="20dp"
-        android:layout_alignParentBottom="true"
-        android:background="@drawable/rounded_button"/>
+        android:layout_marginTop="20dp"
+        android:background="@drawable/rounded_button"
+        android:layout_below="@id/editText_movie_input"/>
 </RelativeLayout>
