--- a/app/src/main/res/layout/fragment_buy_ticket.xml
+++ b/app/src/main/res/layout/fragment_buy_ticket.xml
@@ -17,8 +17,8 @@
 
     <LinearLayout
         android:id="@+id/movies_layout"
-        android:layout_width="match_parent"
-        android:layout_height="400dp"
+        android:layout_width="384dp"
+        android:layout_height="305dp"
         android:layout_below="@id/text_repertuar"
         android:orientation="vertical" />
     <EditText
@@ -28,9 +28,9 @@
         android:hint="Wpisz rodzaj biletu"
         android:textSize="20sp"
         android:layout_below="@id/movies_layout"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginHorizontal="40dp"
+        android:layout_marginHorizontal="20dp"
         android:inputType="text"/>
     <Button
         android:id="@+id/button_choose_movie"
@@ -39,7 +39,17 @@
         android:text="Wybierz film"
         android:textSize="25sp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:background="@drawable/rounded_button"
         android:layout_below="@id/editText_movie_input"/>
+
+    <Button
+        android:id="@+id/button_pay_with_paypal"
+        android:layout_width="197dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/button_choose_movie"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp"
+        android:text="PayPal"
+        android:textSize="25sp"/>
 </RelativeLayout>
