--- a/app/src/main/res/layout/fragment_reservation.xml
+++ b/app/src/main/res/layout/fragment_reservation.xml
@@ -13,6 +13,14 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_margin="8dp"/>
+    <Button
+        android:id="@+id/buttonRefresh"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Odśwież"
+        android:layout_toStartOf="@id/buttonDalej"
+        android:layout_alignBaseline="@id/buttonDalej"
+        android:layout_marginEnd="8dp"/>
     <EditText
         android:id="@+id/place_textinput"
         android:layout_width="match_parent"
